<resources>
    <string name="app_name">Authentication App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="logout_button">Logout</string>
    <string name="login_button">Login</string>
    <string name="login_existing_account">Login with your account</string>
    <string name="already_registered">Already Registered? Login here</string>
    <string name="new_account">New here? Create an account</string>
    <string name="reset_password">Forgot password? Reset here</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email address</string>
    <string name="your_phone">Your phone number</string>
    <string name="not_verified">Email not verified</string>
    <string name="verify_button">Verify now</string>
    <string name="change_password_button">Change password</string>
    <string name="change_profile_button">Edit Profile</string>
    <string name="save">Save</string>
    <string name="full_name">Full name</string>
</resources>
