<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87C2F1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.ch.android.authenticationapp.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="#FFE300"
        android:textSize="40sp"
        app:fontFamily="@font/spicy_rice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_existing_account"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:fontFamily="@font/spicy_rice" />

    <EditText
        android:id="@+id/edittext_email_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="#000000"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="text"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/edittext_password_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="#000000"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:inputType="text"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="#37FF00"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/create_new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/new_account"/>

</LinearLayout>